--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Yew App</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link data-trunk rel="css" href="styles.css" />
     </head>
     <body></body>
 </html>
