--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Yew App</title>
         <link rel="stylesheet" href="styles.css" />
         <link data-trunk rel="css" href="styles.css" />
+        <link data-trunk rel="copy-dir" href="assets"/>
     </head>
     <body></body>
 </html>
